# volta

./: .gitignore  BENCHMARKS.md  Modelfile  README.md  pyproject.toml
.claude/: launch.json
backend/: main.py  requirements.txt
core/: amaranth_generator.py  correction_engine.py  llm_client.py  orchestrator.py  rtl_generator.py  schema.py  spec_interpreter.py  testbench_generator.py
core/templates/: and3_gate.v  and4_gate.v  and_gate.v  decoder2to4.v  dff.v  encoder4to2.v  full_adder.v  half_adder.v  mux2.v  mux4.v  nand3_gate.v  nand4_gate.v  nand_gate.v  nor3_gate.v  nor4_gate.v  nor_gate.v  not_gate.v  or3_gate.v  or4_gate.v  or_gate.v  xnor_gate.v  xor3_gate.v  xor_gate.v
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  defaults.js  index.css  symbolsData.js
frontend/src/components/: ChatBot.jsx  ChipIcon.jsx  ContextPanel.jsx  DiagramView.jsx  EditorPane.jsx  ErrorBoundary.jsx  ProgressIndicator.jsx  ProjectExplorer.jsx  SchematicView.jsx  Sidebar.jsx  SymbolsLibrary.jsx  Toolbar.jsx  WaveformViewer.jsx  oneDarkTheme.js  verilogComplete.js  verilogLinter.js
frontend/src/utils/: languageTransforms.js
output/: alu.v  alu_corrected.v  test_alu.py
tests/: eval_suite.py  validation_suite.py
tests/unit/: test_extract_verilog.py  test_vcd_parser.py  test_verilog_fixes.py
