[project]
name = "volta"
version = "0.1.0"
description = "AI-powered chip design platform"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "amaranth>=0.4.0",
  "cocotb>=1.9.0",
  "cocotb-bus>=0.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_suite.py"]
# Put the repo root on sys.path so test files can do `from backend.main import ...`.
# backend/ has no __init__.py by design — it's a script entry point, not a package —
# so we rely on PEP 420 implicit namespace packages here.
pythonpath = ["."]
